# slutop

./: .pre-commit-config.yaml  404.html  CNAME  README.md  README.zh.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: merge_rules.yaml
.github/workflows/: push.yaml
about/: index.html
about/license/: index.html
about/privacy/: index.html
docs/: mkdocs.yml
docs/docs/: index.md  index.zh.md
docs/docs/about/: privacy.md  privacy.zh.md
docs/overrides/assets/css/: fonts.css
search/: search_index.json
slutop/: __init__.py  __main__.py  cli.py
slutop/api/: __init__.py  history.py  models.py  snapshot.py  source.py  tres.py
slutop/tui/: __init__.py  render.py  theme.py
tests/: conftest.py  test_cli.py
tests/api/: test_history.py  test_models.py  test_snapshot.py  test_source.py  test_tres.py
tests/fixtures/: nodes_v0.0.44.json  sinfo_v0.0.37.json  squeue.json  squeue_v0.0.44.json
tests/tui/: test_render.py  test_theme.py
zh/: index.html
zh/about/: index.html
zh/about/license/: index.html
zh/about/privacy/: index.html
