[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm",
]

[project]
name = "slutop"
description = "An interactive monitor for Slurm clusters"
readme = "README.md"
keywords = [
  "cluster",
  "HPC",
  "monitoring",
  "Slurm",
  "top",
]
license = { file = "LICENSE" }
maintainers = [
  { name = "Zhiyuan Chen", email = "this@zyc.ai" },
]
authors = [
  { name = "Zhiyuan Chen", email = "this@zyc.ai" },
]
requires-python = ">3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = [
  "version",
]
dependencies = [
  "chanfig",
  "rich",
]
urls.documentation = "https://slutop.danling.org"
urls.homepage = "https://slutop.danling.org"
urls.repository = "https://github.com/ZhiyuanChen/slutop"
scripts.slutop = "slutop.cli:main"

[tool.setuptools]
packages = [ "slutop", "slutop.api", "slutop.tui" ]

[tool.setuptools_scm]
write_to = "slutop/_version.py"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120

[tool.pylint]
main.fail-under = 9.8
messages_control.disable = """
  E0012,
  E0401,
  R0201,
  R0801,
"""
reports.output-format = "colorized"
format.max-line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
ini_options.addopts = "--doctest-modules --cov"
ini_options.markers = [
  "lfs: tests that involve large file handling and should be excluded from CI",
]

[tool.coverage]
run.branch = true
run.include = [ "slutop/**" ]
paths.source = [ "slutop" ]
report.fail_under = 64
report.show_missing = true
json.output = "coverage.json"
xml.output = "coverage.xml"
